# forgiva-server

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.BuildEnv  README.md  build.sh
etc/: test.json
src/: common.c  common.h  core_main.c  core_main.h  debug.c  debug.h  forgiva.c  forgiva.h  server.c  server.h  test.c  test.h  types.c  types.h
